// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DropDown Snapshot for DropDown close 1`] = `
.c0 {
  cursor: pointer;
  width: 200px;
  height: 40px;
}

.c1 {
  position: relative;
  border-radius: 4px;
  border: solid 1px #c4c4c4;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: white;
}

.c1:hover {
  border: solid 1px black;
}

.c2 {
  text-indent: 15px;
}

.c3 {
  color: #030303;
}

.c4 {
  position: absolute;
  right: 10px;
  color: #909090;
  -webkit-transform: rotate(360deg);
  -ms-transform: rotate(360deg);
  transform: rotate(360deg);
  -webkit-transition: -webkit-transform .2s ease-in-out;
  -webkit-transition: transform .2s ease-in-out;
  transition: transform .2s ease-in-out;
}

<div
  className="c0"
>
  <div
    className="c1"
    id="DropDownHeader"
    onClick={[Function]}
  >
    <div
      className="c2 c3"
    >
      
    </div>
    <div
      className="c4"
      id="DropDownArrow"
    >
      ▼
    </div>
  </div>
</div>
`;

exports[`test DropDown Snapshot for DropDown open 1`] = `
.c0 {
  cursor: pointer;
  width: 200px;
  height: 40px;
}

.c1 {
  position: relative;
  border-radius: 4px;
  border: solid 1px #c4c4c4;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: white;
}

.c1:hover {
  border: solid 1px black;
}

.c2 {
  text-indent: 15px;
}

.c3 {
  color: #030303;
}

.c4 {
  position: absolute;
  right: 10px;
  color: #909090;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform .2s ease-in-out;
  -webkit-transition: transform .2s ease-in-out;
  transition: transform .2s ease-in-out;
}

.c5 {
  position: absolute;
  z-index: 100;
  margin-top: 10px;
}

.c6 {
  box-shadow: rgb(0 0 0 / 8%) 0px 4px 12px;
  border-radius: 8px;
  margin: 0;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  min-height: -webkit-fit-content;
  min-height: -moz-fit-content;
  min-height: fit-content;
  max-height: 250px;
  background: white;
  overflow-y: scroll;
  box-sizing: border-box;
  list-style-type: none;
  text-align: left;
  padding: 10px 5px 10px 10px;
}

.c6::-webkit-scrollbar {
  width: 5px;
  background: rgba(0,0,0,0);
}

.c6::-webkit-scrollbar-track {
  background: rgba(0,0,0,0);
  width: 5px;
  position: relative;
}

.c6::-webkit-scrollbar-thumb:hover {
  background: rgba(0,0,0,0);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  font-size: 16px;
  height: 36px;
  line-height: 36px;
  list-style-type: none;
  padding: 0 12px;
  cursor: pointer;
}

.c8:hover {
  background: #dddddd;
}

@media (hover:hover) and (pointer:fine) {
  .c7:hover .c9 {
    color: black;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    id="DropDownHeader"
    onClick={[Function]}
  >
    <div
      className="c2 c3"
    >
      
    </div>
    <div
      className="c4"
      id="DropDownArrow"
    >
      ▼
    </div>
  </div>
  <div
    className="c5"
  >
    <ul
      className="c6"
    >
      <li
        className="c7 c8"
        id="option 0"
        onClick={[Function]}
        value={0}
      >
        <div
          className="c9 "
        >
          test
        </div>
      </li>
    </ul>
  </div>
</div>
`;
